@@ -1,0 +1,74 @@
+/* XPM */
+static char * logo_xpm[] = {
+"33 52 19 1",
+" 	c None",
+".	c #000000",
+"+	c #180800",
+"@	c #DC1428",
+"#	c #B08010",
+"$	c #341800",
+"%	c #FC1C34",
+"&	c #FC00F1",
+"*	c #FC7880",
+"=	c #C49418",
+"-	c #FCB8B8",
+";	c #FCD8D8",
+">	c #FC989C",
+",	c #FC384C",
+"'	c #FC5864",
+")	c #FCECD8",
+"!	c #6C3400",
+"~	c #502400",
+"{	c #F8FCFC",
+"               ...               ",
+"            +@#@@@@+             ",
+"           $@%&**&%@$            ",
+"          +#=--;--->%$           ",
+"         @*>-----;-->,$          ",
+"        @#-;->*'=-;;-=)$         ",
+"        &>;;-*%@%&--;-*$.        ",
+"       $,-;->,$..!*-;->@$        ",
+"       #=;;>&@.   @>---#$.       ",
+"      .'-;-=%$.   +&--;*@.       ",
+"      +*-;-*@.    .@*-;>%+       ",
+"      $>;;;'!.     @&-;-,$       ",
+"      $>;;-,@      !&;;-,$       ",
+"      +*-;-#@      !';;-,$       ",
+"      .,-;-#@      !*;;-#$       ",
+"       ,>;-#@      @*;;>@.       ",
+"       )*;;'@.     @=;;'!.       ",
+"       !&;;*@.    .%>;-#$        ",
+"       $&-;=@.    .,-->@$        ",
+"        >-;>%$    +*--'$.        ",
+"        ),;-*@.  $#--=@+.        ",
+"         #=--'$++@---,$.         ",
+"          #-;-,!@&;-*%+          ",
+"$$@@@@@@@@@>;;-'=;-=,@@@@@@@@!$..",
+"$@*=======>------;-->>>>>>>>*#$..",
+" @#>----->===>-;;->=>-------*@+. ",
+"  +,>->=',%%#&--->,##&*=>>->#$.  ",
+"  .@'=,@!$+.+@---=@+++$!@,',!.   ",
+"   $!@$     +@-;-=~     $$@$$    ",
+"    $$.     +@-;-=$      .$+     ",
+"            $@-;-=$              ",
+"            $@-;;=$              ",
+"            $@-;;=!              ",
+"            $@;;;>@              ",
+"            $);;;>@              ",
+"            $%;;;>@              ",
+"            @#;;;>@              ",
+"            @,;;;>@              ",
+"            %&{;;-%              ",
+"            #'{;;-#+.            ",
+"           .@>{;;-'$.            ",
+"           .%-;;;;>@+            ",
+"           $&;;;;;-@$            ",
+"           )={;;;;;,$.           ",
+"          .&-;{{{;;*@+           ",
+"          .,-;{{{;;'@+           ",
+"          .@*-;{;-*%$+           ",
+"           .!';;;*@+.            ",
+"            +@>;-#+              ",
+"             $%>'@.              ",
+"              +%@+               ",
+"              .$+.               "};
